# md-compiler-server

./: .gitignore  README.md  pyproject.toml  requirements.lock.txt
scripts/: run.cmd  run.ps1
src/: __init__.py  main.py
src/api/: compiler.py  config.py  health.py
src/output/: __init__.py
src/service/: __init__.py  builder.py  instance.py  lexer.py  parser.py
