[project]
name = "md-compiler-server"
version = "0.1.0"
authors = [{name = "baoxin-qin", email = "baoxin_qin@qq.com"}]
description = "A simple Markdown-To-HTML compiler in FastAPI server point"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.136.0",
	"uvicorn>=0.47.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]